# RunCat-rust

./: Cargo.toml  README.MD  README.md  build.rs  resources.rc
src/: constants.rs  main.rs  timer.rs  tray.rs  updater.rs  utils.rs  window.rs
